--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
 </head>
 <body>
     
@@ -45,6 +46,27 @@
             <p class="bold">Sirdaryo</p>
             <p class="bold">Toshkent vil</p>
             <p class="bold">Navoiy</p>
+        </div>
+
+        <div class="section">
+            <div class="section_left">
+                <div class="img">
+                    <img src="https://storage.kun.uz/source/thumbnails/_medium/7/AfU6gvCk2fIuhNBVe1_6yYzl9xryxDoz_medium.jpg" alt="">
+                </div>
+                <div class="section_text">
+                    <i class="fas fa-calendar-day"></i>
+                    <p>12:02</p>
+                    <h2>Ўзбекистонда конституцияни такомиллаштириш 
+                    масаласини кўриб чиқиш режалаштирилмоқда</h2>
+                    <p>Сенат биносида сайланган президент Шавкат Мирзиёевнинг 
+                    инаугурация маросими бўлиб ўтмоқда. 
+                    Kun.uz мухбири хабарига кўра, 
+                    Шавкат Мирзиёев тадбир давомида нутқ сўзламоқда.</p>
+                </div>
+            </div>
+            <div class="section_right">
+
+            </div>
         </div>
     </div>
 
