--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
                 <div class="img">
                     <img src="https://storage.kun.uz/source/thumbnails/_medium/7/AfU6gvCk2fIuhNBVe1_6yYzl9xryxDoz_medium.jpg" alt="">
                 </div>
-                <div class="section_text">
+                <div class="text">
                     <i class="fas fa-calendar-day"></i>
-                    <p>12:02</p>
+                    <p id="p1">12:02</p>
                     <h2>Ўзбекистонда конституцияни такомиллаштириш 
                     масаласини кўриб чиқиш режалаштирилмоқда</h2>
-                    <p>Сенат биносида сайланган президент Шавкат Мирзиёевнинг 
+                    <p id="p2">Сенат биносида сайланган президент Шавкат Мирзиёевнинг 
                     инаугурация маросими бўлиб ўтмоқда. 
                     Kun.uz мухбири хабарига кўра, 
                     Шавкат Мирзиёев тадбир давомида нутқ сўзламоқда.</p>
