--- a/index.html
+++ b/index.html
@@ -50,22 +50,63 @@
 
         <div class="section">
             <div class="section_left">
-                <div class="img">
-                    <img src="https://storage.kun.uz/source/thumbnails/_medium/7/AfU6gvCk2fIuhNBVe1_6yYzl9xryxDoz_medium.jpg" alt="">
+                <div class="top">
+                    <div class="img">
+                        <img src="https://storage.kun.uz/source/thumbnails/_medium/7/AfU6gvCk2fIuhNBVe1_6yYzl9xryxDoz_medium.jpg" alt="">
+                    </div>
+                    <div class="text">
+                        <i class="fas fa-calendar-day i_float"></i>
+                        <p class="p1">12:02</p>
+                        <h2>Ўзбекистонда конституцияни такомиллаштириш 
+                        масаласини кўриб чиқиш режалаштирилмоқда</h2>
+                        <p id="p2">Сенат биносида сайланган президент Шавкат Мирзиёевнинг 
+                        инаугурация маросими бўлиб ўтмоқда. 
+                        Kun.uz мухбири хабарига кўра, 
+                        Шавкат Мирзиёев тадбир давомида нутқ сўзламоқда.</p>
+                    </div>
                 </div>
-                <div class="text">
-                    <i class="fas fa-calendar-day"></i>
-                    <p id="p1">12:02</p>
-                    <h2>Ўзбекистонда конституцияни такомиллаштириш 
-                    масаласини кўриб чиқиш режалаштирилмоқда</h2>
-                    <p id="p2">Сенат биносида сайланган президент Шавкат Мирзиёевнинг 
-                    инаугурация маросими бўлиб ўтмоқда. 
-                    Kun.uz мухбири хабарига кўра, 
-                    Шавкат Мирзиёев тадбир давомида нутқ сўзламоқда.</p>
+                <div class="bottom">
+
                 </div>
             </div>
             <div class="section_right">
-
+                <h3>Сўнгги  янгиликлар</h3>
+                <div class="paragraph1">
+                    <i class="fas fa-calendar-day i_float"></i>
+                    <p class="p1">22:17</p>
+                    <p class="pg2">Ҳиндистонда 40дан ортиқ инсон қўлбола 
+                    спиртдан заҳарланиб вафот этди</p>
+                </div>
+                <hr>
+                <div class="paragraph1">
+                    <i class="fas fa-calendar-day i_float"></i>
+                    <p class="p1">22:13</p>
+                    <p class="pg2">“Ўзсувтаъминот” AЖ 40 гектар майдонга дарахт 
+                    кўчати экиш ва суғориш тизими яратиш учун 5,28 млрд сўм ажратди</p>
+                </div>
+                <hr>
+                <div class="paragraph1">
+                    <i class="fas fa-calendar-day i_float"></i>
+                    <p class="p1">21:32</p>
+                    <p class="pg2">“Зулфия опага эҳтиром кўрсатмоқчи бўлсак, 
+                    битта мактаб қурайлик” — 2,6 млн долларлик ҳайкал 
+                    ва мажмуа атрофидаги муҳокамалар</p>
+                </div>
+                <hr>
+                <div class="paragraph1">
+                    <i class="fas fa-calendar-day i_float"></i>
+                    <p class="p1">21:32</p>
+                    <p class="pg2">Дуров Telegram’даги расмий рекламаларни 
+                    ўчириш пулли бўлишини эълон қилди</p>
+                </div>
+                <hr>
+                <div class="paragraph1">
+                    <i class="fas fa-calendar-day i_float"></i>
+                    <p class="p1">21:32</p>
+                    <p class="pg2">Навоийда қум бўрони туфайли 3 та машина тўқнашди. 
+                    Бир киши вафот этган</p>
+                </div>
+                <hr>
             </div>
         </div>
     </div>
