--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
 <body>
     
     <div class="container">
+        <!-- header qism -->
         <div class="header">
             <div class="left">
-                <img src="https://kun.uz/assets/cd6ab492/img/kun-uz-logo.svg" style="cursor: pointer;">
+                <img src="https://kun.uz/assets/cd6ab492/img/kun-uz-logo.svg" style="cursor: pointer;" onclick="logo()">
                 <h4>ЎЗБЕКИСТОН</h4>
                 <h4>ЖАҲОН</h4>
                 <h4>ИҚТИСОДИЁТ</h4>
@@ -27,11 +28,16 @@
                 <h4>Business <br> Class</h4>
                 <h4>АУДИО</h4>
                 <img src="https://storage.kun.uz/source/banners/2021/07_05/logo_1_neft.svg" style="cursor: pointer;">
-                <i class="fas fa-search" style="cursor: pointer;"></i>
+                <i class="fas fa-search i" style="cursor: pointer;"></i>
+                <form action="">
+                    <input type="text" style="display: none;" placeholder="Search" id="input">
+                    <input type="submit" style="display: none;" id="submit" value="Go">
+                </form>
             </div>
         </div>
+        <!-- navnar qism -->
         <div class="navbar">
-            <p class="bold">Hududlar</p>
+        	<p class="bold">Hududlar</p>
             <p class="bold">Toshkent</p>
             <p class="bold">Qoraqalpog`iston</p>
             <p class="bold">Andijon</p>
@@ -48,25 +54,78 @@
             <p class="bold">Navoiy</p>
         </div>
 
+        <!-- section qism -->
         <div class="section">
             <div class="section_left">
                 <div class="top">
                     <div class="img">
-                        <img src="https://storage.kun.uz/source/thumbnails/_medium/7/AfU6gvCk2fIuhNBVe1_6yYzl9xryxDoz_medium.jpg" alt="">
+                        <img src="https://storage.kun.uz/source/thumbnails/_medium/7/Spmi9IQeKscdxzbt0Lniwx5c5RFS7HZX_medium.jpg" alt="">
                     </div>
                     <div class="text">
                         <i class="fas fa-calendar-day i_float"></i>
-                        <p class="p1">12:02</p>
-                        <h2>Ўзбекистонда конституцияни такомиллаштириш 
-                        масаласини кўриб чиқиш режалаштирилмоқда</h2>
-                        <p id="p2">Сенат биносида сайланган президент Шавкат Мирзиёевнинг 
-                        инаугурация маросими бўлиб ўтмоқда. 
-                        Kun.uz мухбири хабарига кўра, 
-                        Шавкат Мирзиёев тадбир давомида нутқ сўзламоқда.</p>
+                        <p class="p1">12:32 / 06.11.2021</p>
+                        <h2>Шавкат Мирзиёев Ўзбекистонда кузатилган 
+                        қум бўронлари ҳақида гапирди</h2>
+                        <p id="p2">Сенат биносида сайланган президент Шавкат 
+                        Мирзиёевнинг инаугурация маросими бўлиб ўтмоқда. 
+                        Kun.uz мухбири хабарига кўра, Шавкат Мирзиёев 
+                        тадбир давомида нутқ сўзламоқда.</p>
                     </div>
                 </div>
                 <div class="bottom">
-
+                    <div class="top_bottom">
+                        <div class="left1">
+                            <div class="img1">
+                                <img src="https://storage.kun.uz/source/thumbnails/_medium/7/AfU6gvCk2fIuhNBVe1_6yYzl9xryxDoz_medium.jpg" alt="">
+                            </div>
+                            <div class="text1">
+                                <i class="fas fa-calendar-day i_float"></i>
+                                <p class="p1">12:02 / 06.11.2021</p>
+                                <p class="p_text">Ўзбекистонда конституцияни такомиллаштириш 
+                                масаласини кўриб чиқиш режалаштирилмоқда</p>
+                                <hr>
+                            </div>
+                        </div>
+                        <div class="right1">
+                            <div class="img1">
+                                <img src="https://storage.kun.uz/source/thumbnails/_medium/7/inMBgFqDa15_RAeE6nFYqJaBAFNjSrNK_medium.jpg" alt="">
+                            </div>
+                            <div class="text1">
+                                <i class="fas fa-calendar-day i_float"></i>
+                                <p class="p1">10:47 / 06.11.2021</p>
+                                <p class="p_text">Шавкат Мирзиёев иккинчи президентлик 
+                                муддатига расман киришди</p>
+                                <hr>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="bottom_bottom">
+                        <div class="left1">
+                            <div class="img1">
+                                <img src="https://storage.kun.uz/source/thumbnails/_medium/7/VPadjZ6Hz7p7gGlC6Cj-dLYpGFD0ICu3_medium.jpg" alt="">
+                            </div>
+                            <div class="text1">
+                                <i class="fas fa-calendar-day i_float"></i>
+                                <p class="p1">22:21 / 04.11.2021</p>
+                                <p style="font-family: sans-serif; line-height: 23px; margin-top: 10px;">Telegram'ни блоклашга уриниш: 
+                                Обрўси тўкилган ҳукумат, қовун 
+                                туширган вазирлик ва ишдан кетган уч амалдор</p>
+                                <hr style="margin-top: 10px;">
+                            </div>
+                        </div>
+                        <div class="right1">
+                            <div class="img1">
+                                <img src="https://storage.kun.uz/source/thumbnails/_medium/7/66gWpeq7dyu7Vf9puM8-lSLYr3IhZMYC_medium.jpg" alt="">
+                            </div>
+                            <div class="text1">
+                                <i class="fas fa-calendar-day i_float"></i>
+                                <p class="p1">17:09 / 04.11.2021</p>
+                                <p class="p_text">Телеграм можароси ортидан 
+                                АКТ вазири ва бош вазир маслаҳатчиси ишдан олинди</p>
+                                <hr>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="section_right">
